--- a/user-management-service/src/main/resources/application.properties
+++ b/user-management-service/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 server.port=10011
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12666449
-spring.datasource.username=sql12666449
-spring.datasource.password=qaeuyalVdj
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql= true
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+mysql.jpa.hibernate.ddl-auto=update
+mysql.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12666449
+mysql.datasource.username=sql12666449
+mysql.datasource.password=z2qcXI6J2aWl/rCiOzPLiiqPf857KtZi2tQEcbCb6yk=
+mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mysql.jpa.show-sql=true
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12666449
+#spring.datasource.username=sql12666449
+#spring.datasource.password=be86b99ce073a158599636901962d5cd
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql= true
