--- a/neo-discovery-service/pom.xml
+++ b/neo-discovery-service/pom.xml
@@ -16,12 +16,16 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.0-RC1</spring-cloud.version>
+        <!-- Cassandra driver -->
+        <cassandra-java-driver.version>4.10.0</cassandra-java-driver.version>
+        <cassandra-native-protocol.version>1.4.11</cassandra-native-protocol.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- Spring Boot + Spring Data Cassandra -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-cassandra</artifactId>
@@ -30,21 +34,29 @@
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
 <!--        </dependency>-->
+        <!-- Cassandra driver -->
         <!-- DataStax Java Driver for Apache Cassandra -->
         <dependency>
             <groupId>com.datastax.oss</groupId>
             <artifactId>java-driver-core</artifactId>
-            <version>4.10.0</version> <!-- Use the latest version available -->
+            <version>${cassandra-java-driver.version}</version>
+            <!-- exclude Tinkerpop dependencies to remove groovy warning on Java 11 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tinkerpop</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.datastax.oss</groupId>
+            <artifactId>native-protocol</artifactId>
+            <version>${cassandra-native-protocol.version}</version>
         </dependency>
 <!--        <dependency>-->
-<!--            <groupId>com.datastax.astra</groupId>-->
-<!--            <artifactId>astra-spring-boot-starter</artifactId>-->
-<!--            <version>0.4</version>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
